* change: replaced simple html layout by tablelayout with grids and allow selection if multiple ECUs

--- a/Tools/PrgTool/PrgTool/PrgTool.csproj
+++ b/Tools/PrgTool/PrgTool/PrgTool.csproj
@@ -66,6 +66,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\MainForm.ECU.datasource" />
+    <None Include="Properties\DataSources\MainForm.Job.datasource" />
+    <None Include="Properties\DataSources\MainForm.JobArg.datasource" />
+    <None Include="Properties\DataSources\MainForm.JobResult.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
