* add: save/load bookmarks to/from disk * change: reworked selection handling

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@
 /Tools/PrgTool/PrgTool/obj
 /Tools/PrgTool/PrgTool/bin/Debug
 /Tools/PrgTool/.vs/PrgTool/v15
+/Tools/PrgTool/packages
 /.vs
+/EdiabasLib/UpgradeLog.htm
